# ChangeLog for app-misc/rox
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.9 2002/12/08 14:26:07 bcowan Exp $

*rox-1.3.5 (09 Dec 2002)
  09 Dec 2002; Brad Cowan <bcowan@gentoo.org> rox-1.3.5.ebuild,
  files/digest-rox-1.3.5, gentoo-rox.patch:
  
  Bumped version, added patch from http://www.kerofin.demon.co.uk/rox/patch,
  closes bug #11746.

*rox-1.3.2-r2 (30 Jul 2002)
  30 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> rox-1.3.2-r2.ebuild :
  
  Fixed bug #5757.

*rox-1.3.2-r1 and rox-1.2.1-r1 (28 Jul 2002)

  28 Jul 2002; Seemant Kulleen <seemant@gentoo.org> rox-1.2.1-r1.ebuild
  rox-1.3.2-r1.ebuild :

  SLOTified them.

*rox-1.3.2 (13 Jul 2002)

  13 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> rox-1.3.2.ebuild :

  New version, ebuild submitted by Riccardo Persichetti <ricpersi@libero.it>
  Closes bug #4944 

*rox-1.2.1 (10 Jul 2002)

  10 Jul 2002; Seemant Kulleen <seemant@gentoo.org> rox-1.2.1.ebuild
  files/digest-rox-1.2.1 :

  Version bump.

*rox-1.2.0 (16 Apr 2002)

  16 Apr 2002; Ryan Phillips <rphillips@shivan.org> rox-1.2.0.ebuild :

  Updated ebuild to rox 1.2.0
    
*rox-1.1.8-r3 (30 Mar 2002)

  30 Mar 2002; Bruce A. Locke <blocke@shivan.org> rox-1.1.8-r3.ebuild :

  Added libxml2 header fix

*rox-1.1.8-r1 (28 Feb 2002)

  28 Feb 2002; Bruce A. Locke <blocke@shivan.org> rox-1.1.8-r1.ebuild :

  Added libxml2 as a dependency
