@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/rox
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.9 2002/12/08 14:26:07 bcowan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.10 2003/01/26 23:21:43 bcowan Exp $
+
+*rox-1.3.6 (26 Jan 2003)
+  26 Jan 2003; Brad Cowan <bcowan@gentoo.org> rox-1.3.6.ebuild,
+  files/digest-rox-1.3.6:
+  Version bump.
 
 *rox-1.3.5 (09 Dec 2002)
   09 Dec 2002; Brad Cowan <bcowan@gentoo.org> rox-1.3.5.ebuild,
